navbar navegación en responsive

--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -59,6 +59,23 @@
 }
 
 
+@media (max-width: 600px) {
+  .hidden-phone {
+    display: none;
+  }
+  .visible-phone {
+    display: inherit;
+  }
+}
+@media (min-width: 600px) {
+  .hidden-phone {
+    display: inherit;
+  }
+  .visible-phone {
+    display: none;
+  }
+}
+
 
 
 
