--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -10,18 +10,20 @@
 // -------------------------
 
 @purple:                  #a200ff;
-@magenta:                 #e71c77;
+@magenta:                 #ff0097;
 @teal:                    #00aba9;
 @lime:                    #8cbf26;
 @brown:                   #a05000;
 @pink:                    #e671b8;
-@orange:                  #ee702f;
+@orange:                  #F5743B;
 @blue:                    #25cad3;
-@red:                     #e51400;
-@green:                   #1fb3ab;
-@yellow:                  #F4B328;
+@red:                     #ef5050;
+@green:                   #38A098;
+@yellow:                  #f8b133;
 @red-dark:                darken(@red, 10%);
 @white:                   #fefefe;
+@green-light:             #8CCE00;
+
 
 // Grays
 // -------------------------
