--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -194,9 +194,9 @@
 @input-bg-disabled:              lighten(@gray-lighter, 4%);
 
 @input-color:                    lighten(@gray, 10%);
-@input-border:                   @white;
+@input-border:                   transparent;
 @input-border-radius:            @border-radius-base;
-@input-border-focus:             @white;
+@input-border-focus:             transparent;
 
 @input-color-placeholder:        @gray-light;
 
