--- a/assets/less/home.less
+++ b/assets/less/home.less
@@ -2,11 +2,6 @@
 // Home
 // --------------------------------------------------
 
-.container-body {
-  background: @gray-lighter;
-  min-height: 350px;
-}
-
 // Accessos rapidos
 
 .box-access-home {
@@ -20,7 +15,8 @@
     .access-home {
       text-align: center;
       a {
-        border-right: none;
+        border: none;
+        padding-right: 20px;
         padding-left: 20px;
         padding-bottom: 14px;
         padding-top: 40px;
@@ -49,7 +45,7 @@
     .btn-group {
       .access-home {
         a {
-          border-right: 10px;
+          padding-right: 10px;
           padding-left: 10px;
           padding-bottom: 14px;
           padding-top: 22px;
@@ -70,7 +66,7 @@
     .btn-group {
       .access-home {
         a {
-          border-right: 10px;
+          padding-right: 10px;
           padding-left: 10px;
           padding-bottom: 14px;
           padding-top: 22px;
@@ -87,21 +83,26 @@
     }
   }
   @media (max-width: 600px ) {
-    width: percentage(1 / 2);
+    width: percentage(1 / 3);
     .btn-group {
       .access-home {
         a {
-          border-right: 10px;
-          padding-left: 10px;
+          padding-right: 20px;
+          padding-left: 20px;
           padding-bottom: 14px;
           padding-top: 22px;
 
           h5 {
-            font-size: 14px;
+            font-size: 10px;
+            margin: 0;
           }
           h4 {
             font-size: 26px;
             color: @blue;
+            margin: 0;
+          }
+          img {
+            height: 40px;
           }
         }
       }
