--- a/assets/less/structure.less
+++ b/assets/less/structure.less
@@ -2,7 +2,7 @@
 
 .container-body {
   background: @gray-lighter;
-  min-height: 350px;
+  min-height: 600px;
   padding: 22px 20px;
   height: 100%;
 
@@ -12,7 +12,7 @@
     float: left;
     width: percentage(1 / 6);
     background: @blue;
-    height: 100%;
+    height: 530px;
     padding: 20px;
 
     h5 {
@@ -33,8 +33,49 @@
     float: left;
     width: percentage(5 / 6);
     background: @white;
-    height: 100%;
+    height: 530px;
     padding: 20px;
+
+    h4 {
+      color: @gray-dark;
+      text-align: center;
+      .text-uppercase();
+    }
+    h5 {
+      color: @gray-dark;
+      text-align: left;
+      padding-left: 10px;
+    }
+    a {
+      .text-uppercase();
+      float: right;
+      margin-bottom: 10px;
+    }
+    .table-complet {
+      background-color: @white;
+      border: none;
+    }
+
+    .form-control {
+      height: 35px;
+      border: 1px solid transparent;
+      -webkit-box-shadow: none;
+      box-shadow: none;
+      -webkit-transition: none;
+      transition: none;
+    }
+    .form-complet {
+      background-color: @white;
+      border: 1px solid @gray-lighter;
+    }
+    .container-invoice {
+      .form-group {
+        padding-top: 35px;
+      }
+      .control-label {
+        text-align: right;
+      }
+    }
   }
 }
 
