--- a/assets/less/buttons.less
+++ b/assets/less/buttons.less
@@ -67,6 +67,9 @@
 .btn-info {
   .button-variant-lighten(@btn-info-color; @btn-info-bg; @btn-info-border);
 }
+.btn-green {
+  .button-variant-lighten(@btn-green-color; @btn-green-bg; @btn-green-border);
+}
 
 
 
