--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -42,6 +42,7 @@
 @brand-info:            @orange;
 @brand-warning:         @green-light;
 @brand-danger:          @magenta;
+@brand-green:           darken(@blue, 10%);
 
 
 // Scaffolding
@@ -183,6 +184,12 @@
 @btn-info-border:                @white;
 @btn-info-hover:                 darken(@btn-info-bg, 2%);
 @btn-info-table:                 @brand-info;
+
+@btn-green-color:                 @white;
+@btn-green-bg:                    @brand-green;
+@btn-green-border:                transparent;
+@btn-green-hover:                 darken(@btn-green-bg, 2%);
+@btn-green-table:                 @brand-green;
 
 @btn-link-disabled-color:        @gray-light;
 
