--- a/assets/less/pagination.less
+++ b/assets/less/pagination.less
@@ -2,7 +2,7 @@
 // Pagination (multiple pages)
 // --------------------------------------------------
 .pagination {
-  margin: 0;
+  margin: 25px 0 0;
   li > a {
     border: none;
     border-radius: 0;
@@ -22,4 +22,9 @@
     border: none;
     border-radius: 0;
   }
+}
+
+
+.container-pagination {
+  float: right;
 }
