--- a/assets/less/pagination.less
+++ b/assets/less/pagination.less
@@ -9,6 +9,9 @@
     padding: 7px 14px;
   }
 }
+.pagination-reports {
+  margin: 12px 0 0;
+}
 
 .pagination-gallery {
   display: block;
@@ -26,5 +29,5 @@
 
 
 .container-pagination {
-  float: right;
+  text-align: center;
 }
