--- a/assets/less/structure.less
+++ b/assets/less/structure.less
@@ -25,6 +25,18 @@
       .text-uppercase();
       font-size: 12px;
     }
+    p {
+      font-size: 12px;
+      color: @white;
+    }
+    .total {
+      font-size: 12px;
+      color: @white;
+      font-weight: 400;
+    }
+    .total-right {
+      text-align: right;
+    }
     a {
       text-align: left;
       position: relative;
