--- a/assets/less/structure.less
+++ b/assets/less/structure.less
@@ -29,13 +29,14 @@
       font-size: 12px;
       color: @white;
     }
+    .total-right {
+      text-align: right;
+    }
     .total {
       font-size: 12px;
       color: @white;
-      font-weight: 400;
-    }
-    .total-right {
-      text-align: right;
+      font-weight: 900;
+      margin-top: 0;
     }
     a {
       text-align: left;
@@ -137,7 +138,47 @@
   }
 }
 
+.upload-document {
+  background: @blue;
+  height: 80%;
+  width: 100%;
+  text-align: center;
+  text-decoration: none;
+  margin-bottom: 20px;
 
+  h3 {
+    color: @white;
+    .text-uppercase();
+    span {
+      font-weight: 900;
+    }
+  }
+  p {
+    color: @white;
+    .text-uppercase();
+    font-size: 18px;
+  }
+  img {
+    margin-top: 150px;
+    height: 90px;
+  }
+  &:hover {
+    text-decoration: none;
+    background: darken(@blue, 5%)
+  }
+}
+
+.container-button {
+  text-align: center;
+  min-height: 1px;
+  height: 50px;
+  float: left;
+  width: 100%;
+
+  a {
+    float: right;
+  }
+}
 
 
 
