--- a/assets/less/forms.less
+++ b/assets/less/forms.less
@@ -121,7 +121,7 @@ input[type=checkbox].css-checkbox + label.css-label {
   display: inline-block;
   background-repeat: no-repeat;
   background-position: 0 0;
-  font-size: 14px;
+  font-size: @font-size-base;
   line-height: 16px;
   vertical-align: middle;
   cursor: pointer;
@@ -183,7 +183,7 @@ input[type=radio].css-radio + label.css-radio-label {
   line-height: 15px;
   background-repeat: no-repeat;
   background-position: 0 0;
-  font-size: 14px;
+  font-size: @font-size-base;
   line-height: 16px;
   vertical-align: middle;
   cursor: pointer;
