--- a/assets/less/table.less
+++ b/assets/less/table.less
@@ -24,9 +24,6 @@
     margin-bottom: 0;
   }
   .btn-default-table {
-    color: @btn-default-table;
-    background-color: @white;
-
     &:hover {
       background-color: lighten(@gray-lighter, 2%);
       color: @btn-default-table;
@@ -160,6 +157,11 @@
   }
   .table-list {
     padding: 10px;
+    border-right: none;
+    border-left: none;
+  }
+  .table-button {
+    padding: 0;
     border-right: none;
     border-left: none;
   }
