--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -14,15 +14,15 @@
 @teal:                    #00aba9;
 @lime:                    #8cbf26;
 @brown:                   #a05000;
-@pink:                    #e671b8;
-@orange:                  #F5743B;
-@blue:                    #25cad3;
+@pink:                    #D36295;
+@orange:                  #EA8D65;
+@blue:                    #72CDD2;
 @red:                     #ef5050;
-@green:                   #38A098;
-@yellow:                  #f8b133;
+@green:                   #59A59A;
+@yellow:                  #F4C171;
 @red-dark:                darken(@red, 10%);
 @white:                   #fefefe;
-@green-light:             #8CCE00;
+@green-light:             #ACC65D;
 
 
 // Grays
@@ -148,8 +148,8 @@
 
 @btn-font-weight:                normal;
 
-@btn-default-color:              @white;
-@btn-default-bg:                 @gray-dark;
+@btn-default-color:              @gray-darker;
+@btn-default-bg:                 @gray-lighter;
 @btn-default-border:             @white;
 @btn-default-hover:              darken(@btn-default-bg, 2%);
 @btn-default-table:              @gray-dark;
