--- a/assets/less/home.less
+++ b/assets/less/home.less
@@ -22,14 +22,14 @@
         padding-top: 40px;
         text-align: center;
 
-        h5 {
-          font-size: 18px;
+        h4 {
+          font-size: @font-size-h4;
           color: @blue;
           .text-uppercase();
         }
-        h4 {
-          font-size: 26px;
+        h3 {
           color: @blue;
+          font-size: @font-size-h3;
         }
         img {
           height: 50px;
@@ -50,11 +50,10 @@
           padding-bottom: 14px;
           padding-top: 22px;
 
-          h5 {
+          h4 {
             font-size: 14px;
           }
-          h4 {
-            font-size: 26px;
+          h3 {
             color: @blue;
           }
         }
@@ -71,11 +70,10 @@
           padding-bottom: 14px;
           padding-top: 22px;
 
-          h5 {
+          h4 {
             font-size: 14px;
           }
-          h4 {
-            font-size: 26px;
+          h3 {
             color: @blue;
           }
         }
@@ -92,12 +90,11 @@
           padding-bottom: 14px;
           padding-top: 22px;
 
-          h5 {
+          h4 {
             font-size: 10px;
             margin: 0;
           }
-          h4 {
-            font-size: 26px;
+          h3 {
             color: @blue;
             margin: 0;
           }
@@ -115,10 +112,10 @@
   .box-access-home:nth-child(2) {
     .access-home {
       a {
-        h5 {
+        h4 {
           color: @orange;
         }
-        h4 {
+        h3 {
           color: @orange;
         }
       }
@@ -127,10 +124,10 @@
   .box-access-home:nth-child(3) {
     .access-home {
       a {
-        h5 {
+        h4 {
           color: @magenta;
         }
-        h4 {
+        h3 {
           color: @magenta;
         }
       }
@@ -139,10 +136,10 @@
   .box-access-home:nth-child(4) {
     .access-home {
       a {
-        h5 {
+        h4 {
           color: @green;
         }
-        h4 {
+        h3 {
           color: @green;
         }
       }
@@ -151,10 +148,10 @@
   .box-access-home:nth-child(5) {
     .access-home {
       a {
-        h5 {
+        h4 {
           color: @yellow;
         }
-        h4 {
+        h3 {
           color: @yellow;
         }
       }
@@ -163,10 +160,10 @@
   .box-access-home:nth-child(6) {
     .access-home {
       a {
-        h5 {
+        h4 {
           color: @green-light;
         }
-        h4 {
+        h3 {
           color: @green-light;
         }
       }
