--- a/assets/less/structure.less
+++ b/assets/less/structure.less
@@ -7,133 +7,106 @@
 
 .container-body {
   background: @gray-lighter;
-  min-height: 580px;
   padding: 22px 20px;
   height: 100%;
-  float: left;
+}
 
-  .container-filter {
-    position: relative;
-    min-height: 1px;
-    float: left;
-    width: percentage(1 / 6);
-    background: @blue;
-    height: 530px;
-    padding: 20px;
-
-    h5 {
-      .text-uppercase();
-      font-size: 12px;
-    }
-    p {
-      font-size: 12px;
+.container-filter {
+  background: @blue;
+  padding: 10px 20px 20px;
+  margin-bottom: 20px;
+  height: auto;
+  .form-group {
+    label {
       color: @white;
     }
-    .total-right {
-      text-align: right;
-    }
-    .total {
-      font-size: 12px;
-      color: @white;
-      font-weight: 900;
-      margin-top: 0;
-    }
-    a {
-      text-align: left;
-      position: relative;
-      margin-bottom: 12px;
-      img {
-        height: 20px;
-        position: absolute;
-        right: 8px;
-        top: 10px;
-      }
-    }
-    .input-group-addon {
-      padding: 10px;
-
-      img {
-        height: 20px;
-      }
+    margin-bottom: 0;
+    button {
+      margin-top: 25px;
     }
   }
-  .container-result {
-    position: relative;
-    min-height: 1px;
-    float: left;
-    width: percentage(5 / 6);
-    background: @white;
-    height: 530px;
-    padding: 20px;
+  .input-group-addon {
+    padding: 10px;
+    img {
+      height: 20px;
+    }
+  }
+}
+.container-result {
+  background: @white;
+  height: 530px;
+  padding: 20px;
 
-    h4 {
-      color: @gray-dark;
-      text-align: center;
-      .text-uppercase();
+  h4 {
+    color: @gray-dark;
+    text-align: center;
+    .text-uppercase();
+  }
+  h5 {
+    color: @gray-dark;
+    text-align: left;
+    padding-left: 10px;
+  }
+  p {
+    text-align: center;
+  }
+  a {
+    .text-uppercase();
+    float: left;
+    margin-bottom: 10px;
+  }
+  .link-table {
+    text-decoration: none;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 0;
+    .text-uppercase {
+      text-transform: capitalize;
     }
-    h5 {
-      color: @gray-dark;
-      text-align: left;
-      padding-left: 10px;
+    img {
+      height: 18px;
+      padding-left: 15px;
     }
-    p {
-      text-align: center;
+  }
+  .table-complet {
+    background-color: @white;
+    border: none;
+    height: 35px;
+    padding: 10px;
+    border-bottom: 1px solid @gray-lighter;
+  }
+  .table-total {
+    padding: 10px;
+    text-align: right;
+  }
+  .form-control {
+    height: 35px;
+    border: 1px solid transparent;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-transition: none;
+    transition: none;
+  }
+  .form-complet {
+    background-color: @white;
+    border: 1px solid @gray-lighter;
+  }
+  .container-invoice {
+    .form-group {
+      padding-top: 35px;
     }
-    a {
-      .text-uppercase();
-      float: left;
-      margin-bottom: 10px;
-    }
-    .link-table {
-      text-decoration: none;
-      padding: 0;
-      margin: 0;
-      margin-bottom: 0;
-      .text-uppercase {
-        text-transform: capitalize;
-      }
-      img {
-        height: 18px;
-        padding-left: 15px;
-      }
-    }
-    .table-complet {
-      background-color: @white;
-      border: none;
-    }
-    .table-total {
-      padding: 10px;
+    .control-label {
       text-align: right;
     }
-    .form-control {
-      height: 35px;
-      border: 1px solid transparent;
-      -webkit-box-shadow: none;
-      box-shadow: none;
-      -webkit-transition: none;
-      transition: none;
-    }
-    .form-complet {
-      background-color: @white;
-      border: 1px solid @gray-lighter;
-    }
-    .container-invoice {
-      .form-group {
-        padding-top: 35px;
-      }
-      .control-label {
-        text-align: right;
-      }
-    }
-    .input-group-addon {
-      padding: 7px;
-      background-color: transparent;
-      border: 1px solid @gray-lighter;
-      border-left: none;
+  }
+  .input-group-addon {
+    padding: 7px;
+    background-color: transparent;
+    border: 1px solid @gray-lighter;
+    border-left: none;
 
-      img {
-        height: 18px;
-      }
+    img {
+      height: 18px;
     }
   }
 }
