--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -17,6 +17,7 @@
 @pink:                    #D36295;
 @orange:                  #EA8D65;
 @blue:                    #72CDD2;
+@blue-dark:               #569CA0;
 @red:                     #ef5050;
 @green:                   #59A59A;
 @yellow:                  #F4C171;
