--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -706,7 +706,7 @@
 @code-color:                  #c7254e;
 @code-bg:                     #f9f2f4;
 
-@kbd-color:                   #fff;
+@kbd-color:                   @white;
 @kbd-bg:                      #333;
 
 @pre-bg:                      #f5f5f5;
